fix line spacing api kernel attributes

--- a/doc/htmldoc/static/css/custom.css
+++ b/doc/htmldoc/static/css/custom.css
@@ -58,25 +58,22 @@ a:hover{color:var(--nest-orange); text-decoration:underline;}
 	 background-color: #ffd1c1;
    font-family: "Roboto Mono","Courier New",Courier,monospace;
  }
- /* set the kernelattributes in api  positioning to one line */
-dl.py.attribute dd  {
- display: flex;
- align-items: first baseline;
- flex-wrap: wrap;
- gap: 10px;
- margin-left: 0.4em;
-
-}
-section#kernel-attributes dl.py.class dd dl.py.attribute dd dl.field-list.simple {
-	display: flex;
-	align-items: baseline;
-}
-
-.sig-prename.descclassname{
+section#kernel-attributes-nest-nestmodule em.property{
   display: none;
 }
+section#kernel-attributes-nest-nestmodule dt:target {
+	margin-top: -0.55rem;
+	padding-top: 0.45rem;
+}
+section#kernel-attributes-nest-nestmodule dl.field-list.simple dt.field-odd{
+  position:absolute;
+  padding-left: 0rem;
+}
 
+section#kernel-attributes-nest-nestmodule dl.field-list.simple dd.field-odd{
+  padding-left: 4rem;
 
+}
 /**************************************************************************************
  Settings for overriding material design theme 
  Setting nest colors to override sphinx material "orange" and other default colors
